Añadir logotipos al footer y publicar repo

--- a/src/app/core/shared/footer/footer.component.html
+++ b/src/app/core/shared/footer/footer.component.html
@@ -8,7 +8,17 @@
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="#">GitHub</a></li>
-      <li class="ms-3"><a class="text-muted" href="https://www.linkedin.com/in/marcelo-c-658505210/" target="_blank">LinkedIn</a></li>
+      <li class="ms-3">
+        <a href="" target="_blank">
+          <img class="zoom" src="assets/badges/github.png" alt="GitHub Logo" 
+            width="32" height="32">
+        </a>
+      </li>
+      <li class="ms-3">
+        <a href="https://www.linkedin.com/in/marcelo-c-658505210/" target="_blank">
+          <img class="zoom" src="assets/badges/linkedin.png" alt="LinkedIn Logo"
+            width="32" height="32">
+        </a>
+      </li>
     </ul>
 </footer>
