Añadir paginación y buscador

--- a/src/app/core/shared/footer/footer.component.html
+++ b/src/app/core/shared/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
-      <span class="mb-3 mb-md-0 text-muted">© 2023 MCP</span>
+      <span class="mb-3 mb-md-0 text-muted" title="Desarrollada con fines educativos">© 2023 MCP</span>
     </div>
 
     <div>
@@ -9,13 +9,13 @@
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
       <li class="ms-3">
-        <a href="" target="_blank">
+        <a href="https://github.com/macarrp/DummyJSON" target="_blank" title="Repositorio">
           <img class="zoom" src="assets/badges/github.png" alt="GitHub Logo" 
             width="32" height="32">
         </a>
       </li>
       <li class="ms-3">
-        <a href="https://www.linkedin.com/in/marcelo-c-658505210/" target="_blank">
+        <a href="https://www.linkedin.com/in/marcelo-c-658505210/" target="_blank" title="LinkedIn">
           <img class="zoom" src="assets/badges/linkedin.png" alt="LinkedIn Logo"
             width="32" height="32">
         </a>
