--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
 
-<main class="container mt-2">
+
+<main class="container my-2">
     <app-spinner></app-spinner>
     <router-outlet></router-outlet>
 </main>
