Añadir seccion sobre el proyecto

--- a/src/app/core/shared/footer/footer.component.html
+++ b/src/app/core/shared/footer/footer.component.html
@@ -4,7 +4,10 @@
     </div>
 
     <div>
-        <span class="mb-3 mb-md-0 text-muted">Akafon</span>
+        <span class="mb-3 mb-md-0 text-muted">Akafon </span>
+        <span [style.color]="isApiUp ? 'green' : 'red'" title="La API funciona correctamente">
+          ●
+        </span>
     </div>
 
     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
