--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,8 +1,28 @@
-<section class="">
+<section>
     <div class="d-flex justify-content-center p-2">
         <h1>¡Bienvenido/a a Akafon!</h1>
     </div>
-    <div class="d-flex justify-content-center p-2">
+
+    <div class="d-flex justify-content-center p-2 mb-3">
         <h2>¡Encuentra los mejores productos y al mejor precio!</h2> 
+    </div>
+
+    <ul style="list-style: none; padding-left: 0;">
+        <li>¿Estás perdido? ¡Prueba a hacer click en 
+            <span class="text-success fw-bold">Productos</span>!
+        </li>
+        <li>La parte de usuarios todavía no está implementada, así que no 
+            podrás acceder 😢
+        </li>
+        <li>¿Quieres conocer más sobre el proyecto? ¡Prueba a hacer click en 
+            <span class="text-success fw-bold">Sobre el proyecto</span>!
+        </li>
+    </ul>
+
+    <div class="block-content">
+        ¿Todavía estás leyendo esto? Pues aquí tienes una cita.
+        <blockquote class="my-3 blockstyle">
+            We all need people who will give us feedback. That’s how we improve. - Bill Gates
+        </blockquote>
     </div>
 </section>
