--- a/src/app/core/shared/navbar/navbar.component.html
+++ b/src/app/core/shared/navbar/navbar.component.html
@@ -12,16 +12,18 @@
                 <a routerLink="productos" class="nav-link"> Productos </a>
             </li>
 
-            <li class="nav-item" [ngClass]="{'active': tab === 'tab3'}" (click)="changeActive(3)">
-                <a routerLink="usuarios"  class="nav-link"> Usuarios </a>
+            <li class="nav-item" [ngClass]="{'active': tab === 'tab3'}" >
+                <a  class="nav-link text-danger" style="cursor: not-allowed;" title="No implementado"> Usuarios </a>
             </li>
-
             
+            <li class="nav-item" [ngClass]="{'active': tab === 'tab3'}" (click)="changeActive(4)">
+                <a routerLink="sobre-el-proyecto"  class="nav-link"> Sobre el proyecto </a>
+            </li>            
         </ul>
 
         <ul class="navbar-nav">
             <li class="nav-item" (click)="showCart()">
-                <a routerLink="carritos" class="nav-link"> Carrito </a>
+                <a  class="nav-link text-danger" style="cursor: not-allowed;" title="No implementado"> Carrito </a>
             </li>
         </ul>
     </div>
