Cambiar literal y url en About

--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -34,9 +34,10 @@
             Una vez terminado, desplegaremos el proyecto para que puedas acceder desde cualquier dispositivo.
             Seguiremos el siguiente 
             <a class="text-decoration-none"
-                href="https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site" target="_blank">
-                tutorial.
+                href="https://dev.to/gedgonz/haciendo-deploy-de-una-app-en-angular-a-githubpages-4bll" target="_blank">
+                tutorial
             </a>
+            (seguir desde el paso 3) para configurar el repositorio y desplegar con Angular.
         </p>
     </div>
 </section>
