--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -1,11 +1,11 @@
 <section class="container">
-    <div class="my-3 d-flex justify-content-center">
+    <div class="my-4 d-flex justify-content-center">
         <h2><strong>Práctica:</strong> Implementación de la API de 
             <a class="text-decoration-none" href="https://dummyjson.com/" target="_blank">DummyJSON</a>
         </h2>
     </div>
 
-    <div class="my-3">
+    <div class="my-4">
         <h3>El <strong>objetivo</strong> es simular una página web totalmente funcional 
             con las operaciones más basicas</h3>
     </div>
@@ -29,15 +29,15 @@
 
     <a href="assets/documents/pdf/Practica Frontend DummyJSON.pdf" target="_blank">Ver documento</a>
 
-    <div class="my-3">
+    <div class="my-4">
         <p>
             Una vez terminado, desplegaremos el proyecto para que puedas acceder desde cualquier dispositivo.
             Seguiremos el siguiente 
             <a class="text-decoration-none"
-                href="https://dev.to/gedgonz/haciendo-deploy-de-una-app-en-angular-a-githubpages-4bll" target="_blank">
+                href="https://medium.com/swlh/how-to-deploy-an-angular-app-to-github-pages-without-using-any-libraries-step-by-step-guide-cfe96fb0c879" target="_blank">
                 tutorial
             </a>
-            (seguir desde el paso 3) para configurar el repositorio y desplegar con Angular.
+            para configurar el repositorio y desplegar con el proyecto Angular.
         </p>
     </div>
 </section>
