--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,17 +1,23 @@
 <section>
     <div class="d-flex justify-content-center p-2">
-        <h1>¡Bienvenido/a a Akafon!</h1>
+        <h1>¡Bienvenido/a a <span style="color: #cda724;">Akafon</span>!</h1>
     </div>
 
     <div class="d-flex justify-content-center p-2 mb-3">
         <h2>¡Encuentra los mejores productos y al mejor precio!</h2> 
     </div>
 
-    <ul style="list-style: none; padding-left: 0;">
-        <li>¿Estás perdido? ¡Prueba a hacer click en 
+    <ul style="list-style: none; padding-left: 0;" class="my-4">
+        <li>
+            ¿Estás perdido? ¡Prueba a hacer click en 
             <span class="text-success fw-bold">Productos</span>!
+            <b>¡</b>Corre porque está todo de <strong title="Es verdad 😂">oferta</strong><b>!</b>
         </li>
-        <li>La parte de usuarios todavía no está implementada, así que no 
+        <li>
+            La parte de <span class="text-danger">usuarios</span> todavía no está implementada, así que no 
+            podrás acceder 😢
+        </li>
+        <li>Al igual que usuarios, el <span class="text-danger">carrito</span> todavía no está implementado, así que no 
             podrás acceder 😢
         </li>
         <li>¿Quieres conocer más sobre el proyecto? ¡Prueba a hacer click en 
