--- a/src/app/modules/product/product.component.html
+++ b/src/app/modules/product/product.component.html
@@ -1,15 +1,22 @@
-<section *ngIf="cargado" class="container">
+<section *ngIf="cargado" class="container my-3">
     
-    <div class="d-flex justify-content-around">
-        <h1><strong>Productos</strong></h1>
-        <div class="col-md-5 mx-auto d-flex border rounded-pill">
+    <div class="my-4 d-flex justify-content-between">
+        <div class="col-3">
+            <h1><strong>Productos</strong></h1>
+        </div>
+
+        <div class="col"></div>
+
+        <div class="col-5 d-flex border rounded-pill">
             <div class="input-group">
-                <input class="form-control" type="search" placeholder="Buscar..." #search>
+                <input class="form-control" type="search" #search
+                (keydown.enter)="searchProduct(search.value)" placeholder="Buscar..." >
             </div>
             <button class="btn" type="button" (click)="searchProduct(search.value)">
                 <img src="assets/icons/search-interface-symbol.png" alt="Buscar" title="Buscar" width="16" height="16">
             </button>
         </div>
+        <div class="col"></div>
     </div>
 
     <app-pagination 
@@ -18,14 +25,43 @@
         (pageClicked)="cargarPagina($event)">
     </app-pagination>
 
-    <div class="row d-flex ">
-        <div *ngFor="let product of products" class="card m-2 p-2" style="width: 18rem;">
-            <img src="{{ product.thumbnail }}" class="card-img-top" alt="Logotipo {{ product.id }}"
-                width="18rem" title="Logo {{ product.id }}">
-            <div class="card-body">
+    <div class="row d-flex">
+        <div *ngFor="let product of products" class="card m-1 p-2" style="width: 18rem;">
+            <div class="p-2">
+                <img src="{{ product.thumbnail }}" class="card-img-top main-logo" alt="Logotipo {{ product.id }}"
+                    title="{{ product.title }}">
+                <hr style="margin-top: 10px; margin-bottom: 0px;">
+            </div>
+            <div class="card-body ">
                 <h5 class="card-title">{{ product.title }}</h5>
-                <p class="card-text">{{ product.description }}</p>
-                <a [routerLink]="['/productos', product.id]" class="btn btn-primary">Ver</a>
+                <p class="card-text" title="{{ product.description  }}">{{ getDescription(product) }}</p>
+                
+                <div class="d-flex">
+                    <p class="fst-italic">Valoración: {{ product.rating }}/5</p>
+
+                    <!-- <div class="d-flex justify-content-center align-items-center">
+                        <ul class="ratings">
+                            <i class="fa fa-star rating-color" *ngFor="let star in 5"></i>
+                        </ul>
+                    </div> -->
+                </div>
+
+                <p class="badge bg-danger"><strong>Oferta</strong></p>
+
+                <div>
+                    <span style="margin-right: 15px" class="text-danger"> -{{ product.discountPercentage }}%</span> 
+                    <strong>{{ getDiscountedPrice(product) | currency }}</strong>
+                </div>
+
+                <div class="mb-2">
+                    <p class="text-muted ">Precio recomendado 
+                        <span class="text-decoration-line-through">{{ product.price | currency }}</span> 
+                    </p>
+                </div>
+
+                <div class="position-absolute" style="bottom: 5px;">
+                    <a [routerLink]="['/productos', product.id]" class="btn btn-primary">Ver</a>
+                </div>
             </div>
         </div>
     </div>
