--- a/src/app/core/shared/navbar/navbar.component.html
+++ b/src/app/core/shared/navbar/navbar.component.html
@@ -24,6 +24,9 @@
         <ul class="navbar-nav">
             <li class="nav-item" (click)="showCart()">
                 <a  class="nav-link text-danger" style="cursor: not-allowed;" title="No implementado"> Carrito </a>
+                <!-- <span class="position-absolute bottom-0 start-100 translate-middle badge rounded-pill bg-danger">
+                    99+ <span class="visually-hidden">unread messages</span>
+                </span> -->
             </li>
         </ul>
     </div>
